/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0; you may not use this file except in compliance with the Elastic License
 * 2.0.
 */

import { Aggregators, Comparator } from '../../../../../../common/custom_threshold_rule/types';
import { CustomThresholdRuleTypeParams } from '../../../types';
import { getLogRateAnalysisEQQuery } from './log_rate_analysis_query';

describe('buildEsQuery', () => {
  const index = 'changedMockedIndex';
  const mockedParams: CustomThresholdRuleTypeParams = {
    groupBy: ['host.hostname'],
    searchConfiguration: {
      index,
      query: { query: 'optionalFilter: container-1', language: 'kuery' },
    },
    criteria: [
      {
        metrics: [{ name: 'A', aggType: Aggregators.COUNT, filter: 'host.name: host-1' }],
        timeSize: 1,
        timeUnit: 'm',
        threshold: [90],
        comparator: Comparator.GT,
      },
    ],
  };
  const mockedAlertWithGroup = {
    fields: {
      'kibana.alert.group': [
        {
          field: 'groupByField',
          value: 'groupByValue',
        },
      ],
    },
  };
  const testData: Array<{
    params: CustomThresholdRuleTypeParams;
    alert: any;
  }> = [
    // With optional filer, count filter and group by
    {
      params: mockedParams,
      alert: mockedAlertWithGroup,
    },
    // With optional filer, count filter and WITHOUT group by
    {
      params: mockedParams,
      alert: {},
    },
    // With multiple metrics
    {
      params: {
        ...mockedParams,
        criteria: [
          {
            metrics: [
              { name: 'A', aggType: Aggregators.COUNT, filter: 'host.name: host-1' },
              { name: 'B', aggType: Aggregators.AVERAGE, field: 'system.load.1' },
            ],
            timeSize: 1,
            timeUnit: 'm',
            threshold: [90],
            comparator: Comparator.GT,
          },
        ],
      },
      alert: {},
    },
  ];

  test.each(testData)('should generate correct es query for %j', ({ alert, params }) => {
    expect(getLogRateAnalysisEQQuery(alert, params)).toMatchSnapshot();
  });
});
