// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildEsQuery should generate correct es query for {"params":{"groupBy":["host.hostname"],"searchConfiguration":{"index":"changedMockedIndex","query":{"query":"optionalFilter: container-1","language":"kuery"}},"criteria":[{"metrics":[{"name":"A","aggType":"count","filter":"host.name: host-1"},{"name":"B","aggType":"avg","field":"system.load.1"}],"timeSize":1,"timeUnit":"m","threshold":[90],"comparator":">"}]},"alert":{}} 1`] = `undefined`;

exports[`buildEsQuery should generate correct es query for {"params":{"groupBy":["host.hostname"],"searchConfiguration":{"index":"changedMockedIndex","query":{"query":"optionalFilter: container-1","language":"kuery"}},"criteria":[{"metrics":[{"name":"A","aggType":"count","filter":"host.name: host-1"}],"timeSize":1,"timeUnit":"m","threshold":[90],"comparator":">"}]},"alert":{"fields":{"kibana.alert.group":[{"field":"groupByField","value":"groupByValue"},{"field":"secondGroupByField","value":"secondGroupByValue"}]}}} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "host.name": "host-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "groupByField": "groupByValue",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "secondGroupByField": "secondGroupByValue",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"params":{"groupBy":["host.hostname"],"searchConfiguration":{"index":"changedMockedIndex","query":{"query":"optionalFilter: container-1","language":"kuery"}},"criteria":[{"metrics":[{"name":"A","aggType":"count","filter":"host.name: host-1"}],"timeSize":1,"timeUnit":"m","threshold":[90],"comparator":">"}]},"alert":{"fields":{"kibana.alert.group":[{"field":"groupByField","value":"groupByValue"}]}}} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "host.name": "host-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "groupByField": "groupByValue",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"params":{"groupBy":["host.hostname"],"searchConfiguration":{"index":"changedMockedIndex","query":{"query":"optionalFilter: container-1","language":"kuery"}},"criteria":[{"metrics":[{"name":"A","aggType":"count","filter":"host.name: host-1"}],"timeSize":1,"timeUnit":"m","threshold":[90],"comparator":">"}]},"alert":{}} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "optionalFilter": "container-1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match": Object {
                      "host.name": "host-1",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;
